crates/gmsh/include/gmshc.h


GMSH_API void gmshModelOccGetCurveLoops(const int surfaceTag,
                                        int **curveLoopTags, size_t *curveLoopTags_n,
                                        int ***curveTags, size_t **curveTags_n, size_t *curveTags_nn,
                                        int *ierr);
GMSH_API void gmshModelOccGetSurfaceLoops(const int volumeTag,
                                          int **surfaceLoopTags, size_t *surfaceLoopTags_n,
                                          int ***surfaceTags, size_t **surfaceTags_n, size_t *surfaceTags_nn,
                                          int *ierr);
GMSH_API void gmshModelOccGetMass(const int dim,
                                  const int tag,
                                  double *mass,
                                  int *ierr);
GMSH_API void gmshModelOccGetCenterOfMass(const int dim,
                                          const int tag,
                                          double *x,
                                          double *y,
                                          double *z,
                                          int *ierr);
GMSH_API void gmshModelOccGetMatrixOfInertia(const int dim,
                                             const int tag,
                                             double **mat, size_t *mat_n,
                                             int *ierr);
GMSH_API int gmshModelOccGetMaxTag(const int dim,
                                   int *ierr);
GMSH_API void gmshModelOccSetMaxTag(const int dim,
                                    const int maxTag,
                                    int *ierr);
GMSH_API void gmshModelOccSynchronize(int *ierr);
GMSH_API void gmshModelOccMeshSetSize(const int *dimTags, const size_t dimTags_n,
                                      const double size,
                                      int *ierr);
GMSH_API int gmshViewAdd(const char *name,
                         const int tag,
                         int *ierr);
GMSH_API void gmshViewRemove(const int tag,
                             int *ierr);
GMSH_API int gmshViewGetIndex(const int tag,
                              int *ierr);
GMSH_API void gmshViewGetTags(int **tags, size_t *tags_n,
                              int *ierr);
GMSH_API void gmshViewAddModelData(const int tag,
                                   const int step,
                                   const char *modelName,
                                   const char *dataType,
                                   const size_t *tags, const size_t tags_n,
                                   const double *const *data, const size_t *data_n, const size_t data_nn,
                                   const double time,
                                   const int numComponents,
                                   const int partition,
                                   int *ierr);
GMSH_API void gmshViewAddHomogeneousModelData(const int tag,
                                              const int step,
                                              const char *modelName,
                                              const char *dataType,
                                              const size_t *tags, const size_t tags_n,
                                              const double *data, const size_t data_n,
                                              const double time,
                                              const int numComponents,
                                              const int partition,
                                              int *ierr);
GMSH_API void gmshViewGetModelData(const int tag,
                                   const int step,
                                   char **dataType,
                                   size_t **tags, size_t *tags_n,
                                   double ***data, size_t **data_n, size_t *data_nn,
                                   double *time,
                                   int *numComponents,
                                   int *ierr);
GMSH_API void gmshViewGetHomogeneousModelData(const int tag,
                                              const int step,
                                              char **dataType,
                                              size_t **tags, size_t *tags_n,
                                              double **data, size_t *data_n,
                                              double *time,
                                              int *numComponents,
                                              int *ierr);
GMSH_API void gmshViewAddListData(const int tag,
                                  const char *dataType,
                                  const int numEle,
                                  const double *data, const size_t data_n,
                                  int *ierr);
GMSH_API void gmshViewGetListData(const int tag,
                                  char ***dataType, size_t *dataType_n,
                                  int **numElements, size_t *numElements_n,
                                  double ***data, size_t **data_n, size_t *data_nn,
                                  const int returnAdaptive,
                                  int *ierr);
GMSH_API void gmshViewAddListDataString(const int tag,
                                        const double *coord, const size_t coord_n,
                                        const char *const *data, const size_t data_n,
                                        const char *const *style, const size_t style_n,
                                        int *ierr);
GMSH_API void gmshViewGetListDataStrings(const int tag,
                                         const int dim,
                                         double **coord, size_t *coord_n,
                                         char ***data, size_t *data_n,
                                         char ***style, size_t *style_n,
                                         int *ierr);
GMSH_API void gmshViewSetInterpolationMatrices(const int tag,
                                               const char *type,
                                               const int d,
                                               const double *coef, const size_t coef_n,
                                               const double *exp, const size_t exp_n,
                                               const int dGeo,
                                               const double *coefGeo, const size_t coefGeo_n,
                                               const double *expGeo, const size_t expGeo_n,
                                               int *ierr);
GMSH_API int gmshViewAddAlias(const int refTag,
                              const int copyOptions,
                              const int tag,
                              int *ierr);
GMSH_API void gmshViewCombine(const char *what,
                              const char *how,
                              const int remove,
                              const int copyOptions,
                              int *ierr);
GMSH_API void gmshViewProbe(const int tag,
                            const double x,
                            const double y,
                            const double z,
                            double **values, size_t *values_n,
                            double *distance,
                            const int step,
                            const int numComp,
                            const int gradient,
                            const double distanceMax,
                            const double *xElemCoord, const size_t xElemCoord_n,
                            const double *yElemCoord, const size_t yElemCoord_n,
                            const double *zElemCoord, const size_t zElemCoord_n,
                            const int dim,
                            int *ierr);
GMSH_API void gmshViewWrite(const int tag,
                            const char *fileName,
                            const int append,
                            int *ierr);
GMSH_API void gmshViewSetVisibilityPerWindow(const int tag,
                                             const int value,
                                             const int windowIndex,
                                             int *ierr);
GMSH_API void gmshViewOptionSetNumber(const int tag,
                                      const char *name,
                                      const double value,
                                      int *ierr);
GMSH_API void gmshViewOptionGetNumber(const int tag,
                                      const char *name,
                                      double *value,
                                      int *ierr);
GMSH_API void gmshViewOptionSetString(const int tag,
                                      const char *name,
                                      const char *value,
                                      int *ierr);
GMSH_API void gmshViewOptionGetString(const int tag,
                                      const char *name,
                                      char **value,
                                      int *ierr);
GMSH_API void gmshViewOptionSetColor(const int tag,
                                     const char *name,
                                     const int r,
                                     const int g,
                                     const int b,
                                     const int a,
                                     int *ierr);
GMSH_API void gmshViewOptionGetColor(const int tag,
                                     const char *name,
                                     int *r,
                                     int *g,
                                     int *b,
                                     int *a,
                                     int *ierr);
GMSH_API void gmshViewOptionCopy(const int refTag,
                                 const int tag,
                                 int *ierr);
GMSH_API void gmshPluginSetNumber(const char *name,
                                  const char *option,
                                  const double value,
                                  int *ierr);
GMSH_API void gmshPluginSetString(const char *name,
                                  const char *option,
                                  const char *value,
                                  int *ierr);
GMSH_API int gmshPluginRun(const char *name,
                           int *ierr);
GMSH_API void gmshGraphicsDraw(int *ierr);
GMSH_API void gmshFltkInitialize(int *ierr);
GMSH_API void gmshFltkFinalize(int *ierr);
GMSH_API void gmshFltkWait(const double time,
                           int *ierr);
GMSH_API void gmshFltkUpdate(int *ierr);
GMSH_API void gmshFltkAwake(const char *action,
                            int *ierr);
GMSH_API void gmshFltkLock(int *ierr);
GMSH_API void gmshFltkUnlock(int *ierr);
GMSH_API void gmshFltkRun(int *ierr);
GMSH_API int gmshFltkIsAvailable(int *ierr);
GMSH_API int gmshFltkSelectEntities(int **dimTags, size_t *dimTags_n,
                                    const int dim,
                                    int *ierr);
GMSH_API int gmshFltkSelectElements(size_t **elementTags, size_t *elementTags_n,
                                    int *ierr);