crates/gmsh/src/bindings.rs

unsafe extern "C" {
    pub fn gmshModelOccGetCurveLoops(
        surfaceTag: ::std::os::raw::c_int,
        curveLoopTags: *mut *mut ::std::os::raw::c_int,
        curveLoopTags_n: *mut usize,
        curveTags: *mut *mut *mut ::std::os::raw::c_int,
        curveTags_n: *mut *mut usize,
        curveTags_nn: *mut usize,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelOccGetSurfaceLoops(
        volumeTag: ::std::os::raw::c_int,
        surfaceLoopTags: *mut *mut ::std::os::raw::c_int,
        surfaceLoopTags_n: *mut usize,
        surfaceTags: *mut *mut *mut ::std::os::raw::c_int,
        surfaceTags_n: *mut *mut usize,
        surfaceTags_nn: *mut usize,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelOccGetMass(
        dim: ::std::os::raw::c_int,
        tag: ::std::os::raw::c_int,
        mass: *mut f64,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelOccGetCenterOfMass(
        dim: ::std::os::raw::c_int,
        tag: ::std::os::raw::c_int,
        x: *mut f64,
        y: *mut f64,
        z: *mut f64,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelOccGetMatrixOfInertia(
        dim: ::std::os::raw::c_int,
        tag: ::std::os::raw::c_int,
        mat: *mut *mut f64,
        mat_n: *mut usize,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelOccGetMaxTag(
        dim: ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn gmshModelOccSetMaxTag(
        dim: ::std::os::raw::c_int,
        maxTag: ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelOccSynchronize(ierr: *mut ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn gmshModelOccMeshSetSize(
        dimTags: *const ::std::os::raw::c_int,
        dimTags_n: usize,
        size: f64,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshViewAdd(
        name: *const ::std::os::raw::c_char,
        tag: ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn gmshViewRemove(tag: ::std::os::raw::c_int, ierr: *mut ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn gmshViewGetIndex(
        tag: ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn gmshViewGetTags(
        tags: *mut *mut ::std::os::raw::c_int,
        tags_n: *mut usize,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshViewAddModelData(
        tag: ::std::os::raw::c_int,
        step: ::std::os::raw::c_int,
        modelName: *const ::std::os::raw::c_char,
        dataType: *const ::std::os::raw::c_char,
        tags: *const usize,
        tags_n: usize,
        data: *const *const f64,
        data_n: *const usize,
        data_nn: usize,
        time: f64,
        numComponents: ::std::os::raw::c_int,
        partition: ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshViewAddHomogeneousModelData(
        tag: ::std::os::raw::c_int,
        step: ::std::os::raw::c_int,
        modelName: *const ::std::os::raw::c_char,
        dataType: *const ::std::os::raw::c_char,
        tags: *const usize,
        tags_n: usize,
        data: *const f64,
        data_n: usize,
        time: f64,
        numComponents: ::std::os::raw::c_int,
        partition: ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshViewGetModelData(
        tag: ::std::os::raw::c_int,
        step: ::std::os::raw::c_int,
        dataType: *mut *mut ::std::os::raw::c_char,
        tags: *mut *mut usize,
        tags_n: *mut usize,
        data: *mut *mut *mut f64,
        data_n: *mut *mut usize,
        data_nn: *mut usize,
        time: *mut f64,
        numComponents: *mut ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshViewGetHomogeneousModelData(
        tag: ::std::os::raw::c_int,
        step: ::std::os::raw::c_int,
        dataType: *mut *mut ::std::os::raw::c_char,
        tags: *mut *mut usize,
        tags_n: *mut usize,
        data: *mut *mut f64,
        data_n: *mut usize,
        time: *mut f64,
        numComponents: *mut ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshViewAddListData(
        tag: ::std::os::raw::c_int,
        dataType: *const ::std::os::raw::c_char,
        numEle: ::std::os::raw::c_int,
        data: *const f64,
        data_n: usize,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshViewGetListData(
        tag: ::std::os::raw::c_int,
        dataType: *mut *mut *mut ::std::os::raw::c_char,
        dataType_n: *mut usize,
        numElements: *mut *mut ::std::os::raw::c_int,
        numElements_n: *mut usize,
        data: *mut *mut *mut f64,
        data_n: *mut *mut usize,
        data_nn: *mut usize,
        returnAdaptive: ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshViewAddListDataString(
        tag: ::std::os::raw::c_int,
        coord: *const f64,
        coord_n: usize,
        data: *const *const ::std::os::raw::c_char,
        data_n: usize,
        style: *const *const ::std::os::raw::c_char,
        style_n: usize,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshViewGetListDataStrings(
        tag: ::std::os::raw::c_int,
        dim: ::std::os::raw::c_int,
        coord: *mut *mut f64,
        coord_n: *mut usize,
        data: *mut *mut *mut ::std::os::raw::c_char,
        data_n: *mut usize,
        style: *mut *mut *mut ::std::os::raw::c_char,
        style_n: *mut usize,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshViewSetInterpolationMatrices(
        tag: ::std::os::raw::c_int,
        type_: *const ::std::os::raw::c_char,
        d: ::std::os::raw::c_int,
        coef: *const f64,
        coef_n: usize,
        exp: *const f64,
        exp_n: usize,
        dGeo: ::std::os::raw::c_int,
        coefGeo: *const f64,
        coefGeo_n: usize,
        expGeo: *const f64,
        expGeo_n: usize,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshViewAddAlias(
        refTag: ::std::os::raw::c_int,
        copyOptions: ::std::os::raw::c_int,
        tag: ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn gmshViewCombine(
        what: *const ::std::os::raw::c_char,
        how: *const ::std::os::raw::c_char,
        remove: ::std::os::raw::c_int,
        copyOptions: ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshViewProbe(
        tag: ::std::os::raw::c_int,
        x: f64,
        y: f64,
        z: f64,
        values: *mut *mut f64,
        values_n: *mut usize,
        distance: *mut f64,
        step: ::std::os::raw::c_int,
        numComp: ::std::os::raw::c_int,
        gradient: ::std::os::raw::c_int,
        distanceMax: f64,
        xElemCoord: *const f64,
        xElemCoord_n: usize,
        yElemCoord: *const f64,
        yElemCoord_n: usize,
        zElemCoord: *const f64,
        zElemCoord_n: usize,
        dim: ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshViewWrite(
        tag: ::std::os::raw::c_int,
        fileName: *const ::std::os::raw::c_char,
        append: ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshViewSetVisibilityPerWindow(
        tag: ::std::os::raw::c_int,
        value: ::std::os::raw::c_int,
        windowIndex: ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshViewOptionSetNumber(
        tag: ::std::os::raw::c_int,
        name: *const ::std::os::raw::c_char,
        value: f64,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshViewOptionGetNumber(
        tag: ::std::os::raw::c_int,
        name: *const ::std::os::raw::c_char,
        value: *mut f64,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshViewOptionSetString(
        tag: ::std::os::raw::c_int,
        name: *const ::std::os::raw::c_char,
        value: *const ::std::os::raw::c_char,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshViewOptionGetString(
        tag: ::std::os::raw::c_int,
        name: *const ::std::os::raw::c_char,
        value: *mut *mut ::std::os::raw::c_char,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshViewOptionSetColor(
        tag: ::std::os::raw::c_int,
        name: *const ::std::os::raw::c_char,
        r: ::std::os::raw::c_int,
        g: ::std::os::raw::c_int,
        b: ::std::os::raw::c_int,
        a: ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshViewOptionGetColor(
        tag: ::std::os::raw::c_int,
        name: *const ::std::os::raw::c_char,
        r: *mut ::std::os::raw::c_int,
        g: *mut ::std::os::raw::c_int,
        b: *mut ::std::os::raw::c_int,
        a: *mut ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshViewOptionCopy(
        refTag: ::std::os::raw::c_int,
        tag: ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshPluginSetNumber(
        name: *const ::std::os::raw::c_char,
        option: *const ::std::os::raw::c_char,
        value: f64,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshPluginSetString(
        name: *const ::std::os::raw::c_char,
        option: *const ::std::os::raw::c_char,
        value: *const ::std::os::raw::c_char,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshPluginRun(
        name: *const ::std::os::raw::c_char,
        ierr: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn gmshGraphicsDraw(ierr: *mut ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn gmshFltkInitialize(ierr: *mut ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn gmshFltkFinalize(ierr: *mut ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn gmshFltkWait(time: f64, ierr: *mut ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn gmshFltkUpdate(ierr: *mut ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn gmshFltkAwake(action: *const ::std::os::raw::c_char, ierr: *mut ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn gmshFltkLock(ierr: *mut ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn gmshFltkUnlock(ierr: *mut ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn gmshFltkRun(ierr: *mut ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn gmshFltkIsAvailable(ierr: *mut ::std::os::raw::c_int) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn gmshFltkSelectEntities(
        dimTags: *mut *mut ::std::os::raw::c_int,
        dimTags_n: *mut usize,
        dim: ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn gmshFltkSelectElements(
        elementTags: *mut *mut usize,
        elementTags_n: *mut usize,
        ierr: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
